pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl11.mof
/* Invalid qualifier Scope comma */
Qualifier Abstract : boolean = false, 
    Scope(class, association, ), 
    Flavor(EnableOverride, Restricted);
